--- a/youcancode/backend/templates/login.html
+++ b/youcancode/backend/templates/login.html
@@ -10,9 +10,14 @@
 <body>
 
 <!-- Frosted Glass Navbar -->
-<nav class="navbar glass-navbar hidden-navbar navbar-expand-lg px-4 py-3">
+<nav class="navbar glass-navbar navbar-expand-lg px-4 py-3">
   <div class="container-fluid">
-    <a class="navbar-brand glass-brand" href="{{ url_for('home') }}">YouCanCode</a>
+    <a class="navbar-brand glass-brand d-flex align-items-center" href="{{ url_for('home') }}">
+      <img src="{{ url_for('static', filename='assets/tessaract.jpg') }}" 
+           class="navbar-brand-icon me-2" 
+           alt="Tesseract Icon">
+      YouCanCode
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLinks">
       <span class="navbar-toggler-icon"></span>
     </button>
